--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="background"></div>
     <!-- Text in the center -->
     <div class="text">
-       2 חיים שלי נגה
+       חיים שלי נגה
     </div>
     <!-- Button to start the song -->
     <button class="button" onclick="startSong()">תלחצי על הכפתור המתוק הזה</button>
