--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <button class="button" onclick="startSong()">תלחצי על הכפתור המתוק הזה</button>
     <!-- New message after the button is clicked -->
     <div class="new-message">
-        שיהיה לך ערב נפלא ומלא חמניות וירטואליות
+        שולח לרומנייה שלי מלא חמניות וירטואוליות
     </div>
     <!-- SoundCloud music player with autoplay enabled, but initially muted -->
     <iframe width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" 
